--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "jsoncereal",
     "version": "1.0.1",
     "description": "a simple way to add a uuid to an array of json objects",
+    "type": "module",
     "keywords": [
         "npm",
         "json",
