--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
     "name": "jsoncereal",
-    "version": "1.1.7",
+    "version": "1.1.8",
     "description": "a simple way to add a uuid to an array of json objects",
     "type": "module",
     "keywords": [
         "npm",
         "json",
         "package",
-        "serializer"
+        "serializer",
+        "id",
+        "array",
+        "uuid"
     ],
     "homepage": "https://github.com/lukeku62/jsoncereal",
     "bugs": {
